# secure-native

./: .gitignore  Cargo.toml  Makefile  build.rs
.cargo/: config
src/: lib.rs
src/android/: arg.rs  mod.rs  result.rs  ret.rs  util.rs
src/ios/: arg.rs  error.rs  ffi.rs  mod.rs  ret.rs  string.rs
