[package]
name = "secure-native"
version = "0.1.0"
authors = ["Joseph Mark <sjeohp@gmail.com>"]
edition = "2018"
build = "build.rs"

[target.'cfg(target_os = "ios")'.dependencies]
core-foundation = "0.6"
failure = "0.1"
libc = "0.2"
ffi-support = "0.3"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.10.2"
jni-glue = { git = "https://github.com/sjeohp/jni-bindgen", package = "jni-glue", features = [] }

[target.'cfg(target_os = "android")'.dependencies.jni-android-sys]
git = "https://github.com/sjeohp/jni-bindgen" 
package = "jni-android-sys"
features = [
"api-level-29", 
"android-util-Base64",
"android-app-Activity",
"android-content-Context",
"android-content-Intent",
"android-content-SharedPreferences",
"android-content-SharedPreferences_Editor",
"android-security-keystore-KeyProperties",
"android-security-keystore-KeyGenParameterSpec",
"android-security-keystore-KeyGenParameterSpec_Builder",
"java-lang-String",
"java-security-AlgorithmParameters",
"java-security-spec-AlgorithmParameterSpec",
"java-security-KeyStore_LoadStoreParameter",
"java-security-KeyStore",
"java-security-Key",
"java-security-KeyStore_SecretKeyEntry",
"java-security-SecureRandom",
"java-util-Enumeration",
"javax-crypto-KeyGenerator",
"javax-crypto-SecretKey",
"javax-crypto-Cipher",
"javax-crypto-spec-IvParameterSpec",
"javax-crypto-spec-GCMParameterSpec"
]
